# ai4medicine-2026

./: .gitignore  README.md  _config.yml  _toc.yml  imprint.md  intro.md  pyproject.toml  requirements.txt
.github/workflows/: book.yml
day0_preparation/: pyproject.toml  readme.md
day1.1_python-tools/: 01_jupyter.ipynb  02_ai-assistant.ipynb  03_python-review.ipynb  patient_measurements.csv  readme.md
day1.2_python-data/: 1_Pandas_Introduction.ipynb  2_Data_Cleaning.ipynb  3_Data_Transformation.ipynb  readme.md
day1.2_python-data/data/: lab_data.csv  patients.csv  patients_cleaned.csv  patients_transformed.csv
day1.3_ml-basics/: 01_regression.ipynb  02_random-forest.ipynb  03_clustering.ipynb  04_dimension.ipynb  05_exercise.ipynb  readme.md
day2.1_rdm-medicine/: readme.md
day2.2_dl-basics/: 01_neural_networks.ipynb  02_Convolutional_Neural_Networks.ipynb  02_convolutional_neural_networks.ipynb  03_Auto_Encoders_exercise.ipynb  03_Auto_Encoders_solutions.ipynb  04_LSTMs_exercise.ipynb  04_LSTMs_solutions.ipynb  05_CNNs_exercise.ipynb  05_CNNs_solutions.ipynb  readme.md
day2.3_explainability/: 01_explainability.ipynb  readme.md
day3.1_ml-application/: 01a_segmentation-exercise.ipynb  01b_segmentation-solution.ipynb  02a_machine_learning_exercise.ipynb  02b_machine_learning_solution.ipynb  readme.md
day3.2_dl-application/: 01_LLMs.ipynb  readme.md
