# Guide (user-friendly):
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/

[build-system]
# Choosing a build backend:
# https://packaging.python.org/en/latest/tutorials/packaging-projects/#choosing-a-build-backend
# A list of packages that are needed to build the project package:
requires = ["setuptools", "wheel"]  # REQUIRED if [build-system] table is used
# The name of the Python object that frontends will use to perform the build:
build-backend = "setuptools.build_meta"

[project]
# This is the name of the project.
name = "ai4medicine2026"

# Versions should comply with PEP 440.
version = "0.0.1"

# This is a one-line description of what the project does.
description = "Data Science and AI for Medicine Training School 2026 - Materials"

# Specify which Python versions are supported, e.g. 'pip install' will check this.
requires-python = ">=3.11"

# Packages that the project depends on to run.
dependencies = [
  "bia-bob",
  "ipywidgets",
  "jupyterlab",
  "matplotlib",
  "pandas",
  "notebook",
  "numpy",
  "python-dotenv",
  "scikit-learn",
  "seaborn",
  "shap",
  "torch",
  "torchvision"
]
